--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <script src="js/angular.js"></script>
 
-        <script src="js/app.js"></script>
-        <script src="js/data-view.component.js"></script>
+        <script src="js/person.js"></script>
+        <!-- <script src="js/data-view.component.js"></script> -->
     </head>
 
     <body>
