--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/angular.js"></script>
 
         <script src="js/person.js"></script>
+        <script src="js/navtabs.js"></script>
         <!-- <script src="js/data-view.component.js"></script> -->
     </head>
 
