--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         <header>
             <!-- ID:Navbar -->
-            <nav class="teal darken-3" ng-controller="smallNavController">
+            <nav class="teal darken-3" ng-controller="navController">
                 <div class="nav-wrapper flow-text">
                     <div class="container">
                         <a href="#" class="brand-logo white-text">Logo</a>
@@ -54,7 +54,7 @@
             </nav>
 
             <!-- ID:mobileNavBar -->
-            <ul id="nav-mobile" class="side-nav fixed" ng-controller="smallNavController">
+            <ul id="nav-mobile" class="side-nav fixed" ng-controller="navController">
                 <div class="container center top-pad20">
                     <img class="circle responsive-img" ng-src="{{person.image}}">
                 </div>
@@ -119,7 +119,7 @@
 
     <main class="main blue-grey lighten-5">
         <div class="container">
-            <div class="top-pad20 hide-on-med-and-down" ng-controller="largeNavController">
+            <div class="top-pad20 hide-on-med-and-down" ng-controller="navController">
 
                 <div class="row">
                     <div class="col s12">
@@ -346,7 +346,7 @@
 </footer>
 
 <!-- Dropdown Structure -->
-<ul id="aboutMeDropDown" class="dropdown-content" ng-controller="largeNavController">
+<ul id="aboutMeDropDown" class="dropdown-content" ng-controller="navController">
     <li ng-repeat="info in tabs">
         <a href="#" ng-click="setState(info.name)">
             <strong>{{info.name}}</strong>
