--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                     {{person.firstName}}</a>
                                 <div class="collapsible-body">
                                     <ul>
-                                        <li ng-repeat="info in tabs">
+                                        <li ng-repeat="info in personTabs">
                                             <a href="#" ng-click="setState(info.name)">{{info.name}}</a>
                                         </li>
                                     </ul>
@@ -125,7 +125,7 @@
                     <div class="col s12">
                         <ul class="tabs blue-grey lighten-5">
                             <!-- BUG - Active Tab doesn't follow between mobile to desktop -->
-                            <li class="tab col s3" ng-repeat="info in tabs" ng-class="{'active': info.state == state}">
+                            <li class="tab col s3" ng-repeat="info in personTabs" ng-class="{'active': info.state == state}">
                                 <a href="#" ng-click="setState(info.name)">{{info.name}}</a>
                             </li>
                         </ul>
@@ -254,15 +254,20 @@
                 <div class="row">
                     <div class="col s12 m4" ng-repeat="project in person.projects">
                         <div class="card">
-                            <div class="card-image">
-                                <img class="responsive-img" ng-src="{{project.image}}">
+                            <div class="card-image waves-effect waves-block waves-light">
+                                <img class="activator" ng-src="{{project.image}}">
                             </div>
                             <div class="card-content">
-                                <h5>{{project.name}}</h5>
-                                <p>{{project.text}}</p>
+                                <span class="card-title activator grey-text text-darken-4">{{project.name}}<i class="material-icons right">more_vert</i>
+                                </span>
+                                <p>
+                                    <a ng-href="{{project.website}}">Website</a>
+                                </p>
                             </div>
-                            <div class="card-action">
-                                <a ng-href="{{project.website}}">Website</a>
+                            <div class="card-reveal">
+                                <span class="card-title grey-text text-darken-4">{{project.name}}<i class="material-icons right">close</i>
+                                </span>
+                                <p>{{project.text}}</p>
                             </div>
                         </div>
                     </div>
@@ -273,19 +278,23 @@
                 <h5 class="center hide-on-large-only">{{state}}</h5>
                 <div class="row">
                     <div class="col s12 m4" ng-repeat="team in person.teams">
-                        <div class="card">
-                            <div class="card-image">
-                                <img class="responsive-img" ng-src="{{team.image}}">
-                            </div>
-
-                            <div class="card-content">
-                                <h5>{{team.name}}</h5>
-                                <p>{{team.text}}</p>
-                            </div>
-                            <div class="card-action">
-                                <a ng-href="{{team.website}}">Website</a>
-                            </div>
-                        </div>
+                      <div class="card">
+                          <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" ng-src="{{team.image}}">
+                          </div>
+                          <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">{{team.name}}<i class="material-icons right">more_vert</i>
+                              </span>
+                              <p>
+                                  <a ng-href="{{team.website}}">Website</a>
+                              </p>
+                          </div>
+                          <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4">{{team.name}}<i class="material-icons right">close</i>
+                              </span>
+                              <p>{{team.text}}</p>
+                          </div>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -294,18 +303,23 @@
 
                 <div class="row">
                     <div class="col s12 m4" ng-repeat="event in person.events">
-                        <div class="card">
-                            <div class="card-image">
-                                <img class="responsive-img" ng-src="{{event.image}}">
-                            </div>
-                            <div class="card-content">
-                                <h5>{{event.name}}</h5>
-                                <p>{{event.text}}</p>
-                            </div>
-                            <div class="card-action">
-                                <a ng-href="{{event.website}}">Website</a>
-                            </div>
-                        </div>
+                      <div class="card">
+                          <div class="card-image waves-effect waves-block waves-light">
+                              <img class="activator" ng-src="{{event.image}}">
+                          </div>
+                          <div class="card-content">
+                              <span class="card-title activator grey-text text-darken-4">{{event.name}}<i class="material-icons right">more_vert</i>
+                              </span>
+                              <p>
+                                  <a ng-href="{{event.website}}">Website</a>
+                              </p>
+                          </div>
+                          <div class="card-reveal">
+                              <span class="card-title grey-text text-darken-4">{{event.name}}<i class="material-icons right">close</i>
+                              </span>
+                              <p>{{event.text}}</p>
+                          </div>
+                      </div>
                     </div>
                 </div>
             </div>
@@ -347,7 +361,7 @@
 
 <!-- Dropdown Structure -->
 <ul id="aboutMeDropDown" class="dropdown-content" ng-controller="navController">
-    <li ng-repeat="info in tabs">
+    <li ng-repeat="info in personTabs">
         <a href="#" ng-click="setState(info.name)">
             <strong>{{info.name}}</strong>
         </a>
